--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,11 @@ dependencies:
   sqlite3_flutter_libs: ^0.5.33
   path_provider: ^2.1.5
   path: ^1.9.1
-  freezed_annotation: ^3.0.0
-  json_annotation: ^4.9.0
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  smooth_page_indicator: ^1.2.1
+  cloud_firestore: ^5.6.8
+  firebase_auth: ^5.5.4
 
 dev_dependencies:
   flutter_test:
@@ -54,9 +57,9 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   drift_dev: ^2.26.1
-  build_runner: ^2.4.15
-  freezed: ^3.0.6
-  json_serializable: ^6.9.5
+  build_runner: ^2.4.7
+  freezed: ^2.4.6
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -70,6 +73,19 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+  fonts:
+    - family: noto_regular
+      fonts:
+        - asset: assets/fonts/noto_regular.ttf
+    - family: noto_bold
+      fonts:
+        - asset: assets/fonts/noto_bold.ttf
+    - family: noto_semi_bold
+      fonts:
+        - asset: assets/fonts/noto_semi_bold.ttf
+    - family: noto_extra_bold
+      fonts:
+        - asset: assets/fonts/noto_extra_bold.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
