--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   cloud_firestore: ^5.6.8
   firebase_auth: ^5.5.4
+  dio: ^5.8.0+1
+  geolocator: ^14.0.1
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
