--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   dio: ^5.8.0+1
   geolocator: ^14.0.1
   fluttertoast: ^8.2.12
+  pretty_dio_logger: ^1.3.1
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +64,7 @@ dev_dependencies:
   build_runner: ^2.4.7
   freezed: ^2.4.6
   json_serializable: ^6.7.1
-
+  flutter_dotenv: ^5.1.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -76,6 +77,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - .env
   fonts:
     - family: noto_regular
       fonts:
