--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   geolocator: ^14.0.1
   fluttertoast: ^8.2.12
   pretty_dio_logger: ^1.3.1
-
+  html: ^0.15.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
