--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^15.1.2
   flutter_riverpod: ^2.6.1
-  drift: ^2.26.1
+  floor: ^1.4.2
   sqlite3_flutter_libs: ^0.5.33
   path_provider: ^2.1.5
   path: ^1.9.1
@@ -60,7 +60,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  drift_dev: ^2.26.1
+  floor_generator: ^1.4.2
   build_runner: ^2.4.7
   freezed: ^2.4.6
   json_serializable: ^6.7.1
