인증획득 페이지 작업 및 획득갯수바인딩

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,7 +76,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/
+    - assets/images/
     - .env
   fonts:
     - family: noto_regular
